--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,4 +1,6 @@
 @include mediaXl {
+
+
     main {
         max-width: 1300px;
     }
@@ -20,7 +22,7 @@
             margin: 0 0 2.5rem 0;
             text-align: center;
             float: none;
-            font-size: 58px;
+            font-size: 68px;
         }
 
         a#svgButton {
@@ -85,6 +87,8 @@
                 text-align: center;
             }
         }
+
+
     }
 
     body#Услуги {
@@ -531,6 +535,8 @@
         h2 {
             font-size: 28px;
         }
+
+
     }
 
     footer {
@@ -563,14 +569,27 @@
             }
 
             .supportOptions {
-                display: grid;
+                display: flex;
                 margin: 1rem auto;
                 padding: 0;
                 text-align: center;
                 justify-content: center;
 
+                .supportOptionsItem {
+                    margin: .5rem;
+                    justify-content: center;
+
+                    h5 {
+                        margin: 1rem 0;
+                    }
+
+                    p {
+                        text-align: center;
+                    }
+                }
+
                 hr {
-                    height: 90%;
+                    display: none;
                 }
             }
         }
@@ -894,6 +913,7 @@
         h2 {
             font-size: 28px;
         }
+
     }
 
     footer {
@@ -1146,7 +1166,7 @@
         text-align: center;
 
         h1 {
-            padding-top: calc(100vh - 60vh);
+            padding-top: calc(100vh - 70vh);
             margin: 0 0 2rem 0;
             text-align: center;
             float: none;
@@ -1367,7 +1387,7 @@
         text-align: center;
 
         h1 {
-            padding-top: calc(100vh - 60vh);
+            padding-top: calc(100vh - 80vh);
             margin: 0 0 2rem 0;
             text-align: center;
             float: none;
@@ -1564,6 +1584,132 @@
         }
     }
 
+    section.three {
+        .cards {
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-gap: 0px;
+            justify-content: center;
+            justify-items: center;
+
+            .cardWithImages {
+                background-color: #ffffff;
+                margin: 30px auto;
+                min-width: 296px;
+                max-width: 296px;
+                height: 400px;
+                background: #FFFFFF;
+                box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+                border-radius: 50px;
+                color: #333333;
+                text-align: center;
+                justify-self: center;
+
+                img {
+                    margin: 3rem 0 0 0;
+                }
+
+                h3 {
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: normal;
+                    font-size: 16px;
+                    color: #333333;
+                }
+
+                p.price {
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: normal;
+                    font-size: 30px;
+                    color: #333333;
+                    padding: 0;
+                }
+
+                p.priceExplanation {
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: normal;
+                    font-size: 12px;
+                    color: #6D6D6D;
+                    margin: 0 auto;
+                    padding: 0;
+                }
+
+                p {
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: normal;
+                    font-size: 12px;
+                    text-align: center;
+                    color: #6D6D6D;
+                }
+
+                a.cardSvgButton {
+                    display: block;
+                    color: #557C8C;
+                    font-size: 15px;
+                    position: relative;
+                    margin: 10px auto;
+                    padding: 14px 37px;
+                    border-radius: 37px;
+                    -webkit-border-radius: 37px;
+                    -moz-border-radius: 37px;
+                    -ms-border-radius: 37px;
+                    -o-border-radius: 37px;
+                    position: relative;
+                    z-index: 0;
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: normal;
+                    text-align: center;
+                    text-decoration: none;
+
+                    .icon {
+                        position: absolute;
+                        top: 0px;
+                        left: 0px;
+                        height: 100%;
+                        width: 100%;
+                        z-index: -1;
+
+                        path {
+                            transition: opacity 0.4s ease;
+
+                            &:first-of-type {
+                                fill: transparent;
+                                stroke: url(#linearGradient-1);
+                                stroke-width: 3;
+                                opacity: 1;
+                            }
+
+                            &.icon--plain {
+                                opacity: 0;
+                                stroke: none;
+                                stroke-width: 0;
+                            }
+                        }
+                    }
+
+                    &:hover {
+                        @include easeOut;
+
+                        path {
+                            &:first-of-type {
+                                opacity: 0;
+                            }
+
+                            &.icon--plain {
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     footer {
         text-align: center;
     }
@@ -1748,7 +1894,7 @@
     body#Услуги {
         .headerImage {
             h1 {
-                padding-top: calc(100vh - 80vh);
+                padding-top: calc(100vh - 90vh);
                 margin: 0 50px 0 0;
                 font-size: 38px;
                 float: right;
@@ -1901,7 +2047,7 @@
 
     .headerImage {
         h1 {
-            padding-top: calc(100vh - 80vh);
+            padding-top: calc(100vh - 90vh);
             margin: 0 50px 0 0;
             font-size: 38px;
             float: right;
@@ -1925,7 +2071,7 @@
     body#Услуги {
         .headerImage {
             h1 {
-                padding-top: calc(100vh - 80vh);
+                padding-top: calc(100vh - 99vh);
                 margin: 0 50px 0 0;
                 font-size: 38px;
                 float: right;
@@ -1939,6 +2085,7 @@
             a#svgButton {
                 margin: 18% 0 0 60px;
                 position: relative;
+                font-size: 28px;
                 z-index: 0;
                 float: left;
             }
@@ -2079,7 +2226,7 @@
 
     .headerImage {
         h1 {
-            padding-top: calc(100vh - 90vh);
+            padding-top: calc(100vh - 95vh);
             margin: 0 10px 0 0;
             font-size: 30px;
             float: right;
