--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -570,13 +570,13 @@
 
             .supportOptions {
                 display: flex;
-                margin: 1rem auto;
+                margin: .5rem auto;
                 padding: 0;
                 text-align: center;
                 justify-content: center;
 
                 .supportOptionsItem {
-                    margin: .5rem;
+                    margin: 5px;
                     justify-content: center;
 
                     h5 {
