fixed responsivity issues

--- a/css/style.css
+++ b/css/style.css
@@ -961,7 +961,8 @@ body#Услуги footer {
         justify-content: center; }
         footer .footerContainer .supportOptions .supportOptionsItem {
           margin: 5px;
-          justify-content: center; }
+          justify-content: center;
+          padding: 15px; }
           footer .footerContainer .supportOptions .supportOptionsItem h5 {
             margin: 1rem 0; }
           footer .footerContainer .supportOptions .supportOptionsItem p {
