--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -578,6 +578,7 @@
                 .supportOptionsItem {
                     margin: 5px;
                     justify-content: center;
+                    padding: 15px;
 
                     h5 {
                         margin: 1rem 0;
