fixed responsivity issues

--- a/css/style.css
+++ b/css/style.css
@@ -92,48 +92,34 @@ button {
   background-color: #AEE1F7; }
 
 header {
-  margin-top: 0;
-  position: relative;
-  display: flex;
   padding: 10px;
-  float: left;
   background: #FFFFFF;
   box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
   border-radius: 0px 0px 10px 10px;
-  width: 100vw;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   overflow: hidden; }
-  header div.logo {
-    left: 0%;
-    margin: 1rem 0;
+  header .logo {
     margin-left: 2.5%; }
+  header .navbar-toggler {
+    transform: translate(-35%, 0%);
+    -webkit-transform: translate(-35%, 0%);
+    -moz-transform: translate(-35%, 0%);
+    -ms-transform: translate(-35%, 0%);
+    -o-transform: translate(-35%, 0%); }
   header .headerCentered {
-    float: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     line-height: normal;
-    font-size: 16px; }
-    header .headerCentered ul {
-      text-align: center;
-      justify-self: center;
-      justify-content: center; }
-      header .headerCentered ul li {
-        display: inline;
-        list-style: none;
-        margin-right: 1rem; }
+    font-size: 16px;
+    transition: ease-in 250ms;
+    -webkit-transition: ease-in 250ms;
+    -moz-transition: ease-in 250ms;
+    -ms-transition: ease-in 250ms;
+    -o-transition: ease-in 250ms; }
   header .login {
     font-size: 18px;
-    float: right;
-    position: absolute;
-    top: 50%;
-    right: 0%;
-    transform: translate(-50%, -50%);
     margin-right: 2.5%; }
 
 .headerImage {
@@ -317,6 +303,8 @@ main {
     text-align: center;
     margin: 65px auto 0 auto;
     justify-content: center; }
+    main .socials a {
+      text-decoration: none; }
     main .socials .socialMedia {
       margin: 1.5rem; }
     main .socials .roundedBorders {
@@ -1623,8 +1611,8 @@ body#Услуги footer {
     section.three .cards .cardWithImages {
       background-color: #ffffff;
       margin: 30px auto;
-      min-width: 296px;
-      max-width: 296px;
+      min-width: 299px;
+      max-width: 299px;
       height: 400px;
       background: #FFFFFF;
       box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
