--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -93,7 +93,7 @@
 
     body#Услуги {
         .headerImage {
-            background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
+            background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url("../img/Услуги_header_background.png");
             display: block;
             justify-content: center;
             align-items: center;
@@ -380,7 +380,7 @@
                     display: block;
                     background-color: #ffffff;
                     margin: 1.5rem auto;
-                    min-width: 300px;
+                    min-width: 310px;
                     max-width: 360px;
                     height: 400px;
                     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
@@ -392,19 +392,19 @@
 
                     &:nth-child(1) {
                         .cardParag {
-                            padding-bottom: 4rem;
+                            padding-bottom: 60px;
                         }
                     }
 
                     &:nth-child(2) {
                         .cardParag {
-                            padding-bottom: 0rem;
+                            padding-bottom: 10px;
                         }
                     }
 
                     &:nth-child(3) {
                         .cardParag {
-                            padding-bottom: 6rem;
+                            padding-bottom: 95px;
                         }
                     }
 
@@ -598,7 +598,7 @@
 
     body#Услуги {
         .headerImage {
-            background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
+            background-image: linear-gradient(rgb(255, 255, 255, 0.1), rgba(255, 255, 255, 0.2)), url("../img/Услуги_header_background.png");
             display: block;
             justify-content: center;
             align-items: center;
@@ -872,7 +872,7 @@
                 min-width: 340px;
 
                 p {
-                    margin: 0 10px 0 28px;
+                    margin: 0 28px 0 10px;
                 }
             }
 
@@ -961,7 +961,7 @@
 
     body#Услуги {
         .headerImage {
-            background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
+            background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url("../img/Услуги_header_background.png");
             display: block;
             justify-content: center;
             align-items: center;
@@ -1235,7 +1235,7 @@
             min-width: 300px;
 
             p {
-                padding: 0.5rem 0;
+                padding: 0.425rem 0;
                 margin: 0 10px 0 20px;
             }
         }
@@ -1477,19 +1477,19 @@
 
                 &:nth-child(1) {
                     .cardParag {
-                        padding-bottom: 4rem;
+                        padding-bottom: 60px;
                     }
                 }
 
                 &:nth-child(2) {
                     .cardParag {
-                        padding-bottom: 0rem;
+                        padding-bottom: 10px;
                     }
                 }
 
                 &:nth-child(3) {
                     .cardParag {
-                        padding-bottom: 7rem;
+                        padding-bottom: 10px;
                     }
                 }
 
@@ -2278,3 +2278,5 @@
         }
     }
 }
+
+// linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), url("../img/Услуги_header_background.png");
