--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,21 @@ a {
   font-size: 16px;
   line-height: 8.19px;
   color: #333333;
-  text-decoration: none; }
+  text-decoration: none;
+  transition: ease-in-out 300ms;
+  -webkit-transition: ease-in-out 300ms;
+  -moz-transition: ease-in-out 300ms;
+  -ms-transition: ease-in-out 300ms;
+  -o-transition: ease-in-out 300ms; }
+  a:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    color: #2C5E8E; }
+  a.active {
+    font-style: bold; }
 
 p {
   font-size: 18px;
