--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,7 +77,27 @@ a {
     line-height: 8.19px;
     color: #333333;
     text-decoration: none;
+    transition: ease-in-out 300ms;
+    -webkit-transition: ease-in-out 300ms;
+    -moz-transition: ease-in-out 300ms;
+    -ms-transition: ease-in-out 300ms;
+    -o-transition: ease-in-out 300ms;
+
+    &:hover {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        color: #2C5E8E;
+    }
+
+    &.active {
+        font-style: bold;
+    }
 }
+
+
 
 p {
     font-size: 18px;
