--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ button {
   background-color: #AEE1F7; }
 
 header {
+  height: 60px;
   width: 100%;
   background: #FFFFFF;
   box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
@@ -115,11 +116,13 @@ header {
   overflow: hidden; }
 
 .logo {
+  line-height: 100px;
   position: absolute;
   float: left;
-  margin: 16px 0 0 2.5%; }
+  margin: 0 0 0 2.5%; }
 
 nav {
+  height: 80px;
   position: absolute;
   z-index: 99;
   width: 100vw;
@@ -130,6 +133,7 @@ nav {
   overflow: hidden; }
 
 nav ul {
+  line-height: 50px;
   list-style: none;
   background: white;
   overflow: hidden;
