--- a/scss/style.scss
+++ b/scss/style.scss
@@ -128,6 +128,7 @@ button {
 }
 
 header {
+    height: 60px;
     width: 100%;
     background: #FFFFFF;
     box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
@@ -140,12 +141,14 @@ header {
 
 
 .logo {
+    line-height: 100px;
     position: absolute;
     float: left;
-    margin: 16px 0 0 2.5%;
+    margin: 0 0 0 2.5%;
 }
 
 nav {
+    height: 80px;
     position: absolute;
     z-index: 99;
     width: 100vw;
@@ -157,6 +160,7 @@ nav {
 }
 
 nav ul {
+    line-height: 50px;
     list-style: none;
     background: rgba(255, 255, 255, 1);
     overflow: hidden;
