--- a/css/style.css
+++ b/css/style.css
@@ -78,9 +78,10 @@ a {
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
-    color: #2C5E8E; }
+    color: #0a7aa7; }
   a.active {
-    font-style: bold; }
+    color: #2C5E8E;
+    text-transform: capitalize; }
 
 p {
   font-size: 18px;
@@ -579,9 +580,19 @@ body#Услуги .headerImage {
     -o-border-radius: 50px;
     margin: 0;
     margin-top: 6rem;
-    justify-self: center; }
+    justify-self: center;
+    transition: ease-in-out 300ms;
+    -webkit-transition: ease-in-out 300ms;
+    -moz-transition: ease-in-out 300ms;
+    -ms-transition: ease-in-out 300ms;
+    -o-transition: ease-in-out 300ms; }
     body#Услуги .headerImage button.btn:hover {
-      opacity: .95; }
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      color: white; }
 
 body#Услуги main button.btn {
   border: none;
@@ -598,7 +609,19 @@ body#Услуги main button.btn {
   -moz-border-radius: 50px;
   -ms-border-radius: 50px;
   -o-border-radius: 50px;
-  margin: 0; }
+  margin: 0;
+  transition: ease-in-out 300ms;
+  -webkit-transition: ease-in-out 300ms;
+  -moz-transition: ease-in-out 300ms;
+  -ms-transition: ease-in-out 300ms;
+  -o-transition: ease-in-out 300ms; }
+  body#Услуги main button.btn:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    color: #feffff; }
 
 body#Услуги main section.one h2 {
   font-size: 47px; }
