--- a/scss/style.scss
+++ b/scss/style.scss
@@ -160,6 +160,11 @@ nav {
 }
 
 nav ul {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    color: #333333;
     line-height: 50px;
     list-style: none;
     background: rgba(255, 255, 255, 1);
@@ -173,8 +178,14 @@ nav ul {
 }
 
 .login {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    color: #333333;
     float: right;
     margin-right: 2.5%;
+    font-size: 18px;
 }
 
 nav.black ul {
