--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,14 @@ button {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #AEE1F7; }
 
+#preloader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  overflow: visible;
+  background: #000 url("../img/preloader.gif") no-repeat center center; }
+
 header {
   height: 80px;
   width: 100%;
